appId: dev.noboil.blog
---
- runFlow: login.yaml
- assertVisible: "Blog"
- tapOn:
    text: "plus"
- waitForAnimationToEnd
- assertVisible: "New Post"
- tapOn: "My awesome post"
- inputText: "Delete Test Post"
- hideKeyboard
- tapOn:
    point: 540,1404
- inputText: "Content to delete"
- hideKeyboard
- scrollUntilVisible:
    element: "Create"
    direction: DOWN
    timeout: 5000
- tapOn: "Create"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "Delete Test Post"
    timeout: 10000
- tapOn: "Delete Test Post"
- waitForAnimationToEnd
- assertVisible: "Detail"
- tapOn:
    text: "trash"
- waitForAnimationToEnd
- assertVisible: "Delete"
- assertVisible: "Cancel"
- tapOn: "Cancel"
- waitForAnimationToEnd
- assertVisible: "Delete Test Post"
- tapOn:
    text: "trash"
- waitForAnimationToEnd
- tapOn: "Delete"
- waitForAnimationToEnd
- assertVisible: "Blog"
